--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -14,11 +14,11 @@
         
         <!-- Style --> 
         <link href="http://cloud.webtype.com/css/98498264-8838-4e2c-a0a6-d68fc97fdaf3.css" rel="stylesheet" type="text/css" /> 
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/normalize.css" type="text/css" media="screen" /> 
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/style.css" type="text/css" media="screen" /> 
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" /> 
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/style.css" type="text/css" media="screen" /> 
         
-        <link rel="shortcut icon" href="http://zomgco.com/tramped/favicon.ico"/> 
-        <link rel="apple-touch-icon" href="http://zomgco.com/tramped/apple-touch-icon.png"/> 
+        <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/> 
+        <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/> 
         <style type="text/css">
         .card {
             *background:#{{ user.color_primary }}; /* IE7 */
@@ -32,9 +32,8 @@
  
         <!-- Magic --> 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
-        <script type="text/javascript" src="http://zomgco.com/tramped/js/function.js"></script> 
+        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script> 
     </head> 
-
     <body>
         <div id="mobile-entity" class="flood">
             <div class="wrap">
