--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -54,7 +54,7 @@
                 </div> 
             </div> 
             <div class="wrap"> 
-                <a href="." class="brand replaced">Stamped</a>
+                <a href="/" class="brand replaced">Stamped</a>
                 <div class="coming-soon replaced">Coming soon to the App Store</div> 
                 <div class="card"> 
                     <div class="top-wave"></div> 
