--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -29,7 +29,7 @@
             background:gradient(linear, left top, right bottom, from(#{{ user.color_primary }}), to(#{{ user.color_secondary }}));
         }
         #entity .brand {
-            background:url('http://static.stamped.com/logos/{{ user.color_primary }}-{{ user.color_secondary }}-logo-175x176.png') left top no-repeat;
+            background:url('http://static.stamped.com/logos/{{ user.color_primary }}-{{ user.color_secondary }}-logo-175x176.png') center center no-repeat;
         }
         {% if credit %}
         .card .credit {
