--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -31,6 +31,9 @@
         #entity .brand {
             background:url('http://static.stamped.com/logos/{{ user.color_primary }}-{{ user.color_secondary }}-logo-175x176.png') center center no-repeat;
         }
+        .card .meta .thumb img {
+            margin: 5px 7px;
+        }
         {% if credit %}
         .card .credit {
             padding-left: 32px;
